nagios-plugins (1.4.15-6) UNRELEASED; urgency=low

  * Add icinga as recommand as alternative for nagios3
  * Add '-w %d' as ping argument for check_ping on non-linux plattforms, as
    inetutils-ping is now supporting this, thanks Guillem Jover for bringing
    this up (Closes: #655023)
  * Adding 17_check_smtp_fix_duplicate_cert_message.dpatch and
    17_check_tcp_fix_duplicate_cert_message.dpatch (Closes: #654682), to fix
    duplicate messages when certificate errors occures, thanks Sebastian Harl
    for reporting
  * Add build-arch and build-indep targets to debian/rules
  * Add 03_check_disk_smb_perfdata.dpatch to add perfdata to check_disk_smb
   (Closes: #654259), thanks to G. Leimua
  * Add 18_check_snmp_labels.dpatch to fix multiple labels in check_snmp
   (Closes: #647020), thanks to Oskar Liljeblad
  * Updating Vcs-Browser field
  * Add 19_check_http_help.dpatch to clarify that check_http won't verify
    certificates (Closes: #644627), thanks to Michael Renner
  * Add check_jabber and check_jabber_4 command definitions
  * Add check_mysql_slave command definition

 -- Jan Wagner <waja@cyconet.org>  Wed, 07 Sep 2011 15:33:55 +0200

nagios-plugins (1.4.15-5) unstable; urgency=low

  * Enable hardening options (Closes: #542728)
  * Bump Standards-Version to 3.9.2, no changes needed
  * Updating package description (Closes: #640070), thanks to Christoph Anton
    Mitterer
    - Listing the checks of each package
    - Hint added, that nagios-plugins-basic needs more packages (recommands)
  * Adding 16_check_raduis_fix_format-security.dpatch to fix error in
    check_radius when compiling with -Werror=format-security (hardening),
    thanks Thomas Guyot-Sionnesti - LP: #837085
  * Adding 15_check_sensors_fault.dpatch to detect sensors in FAULT state,
    thank Holger Weiss (Closes: #615133)
  * Remove empty /usr/include from nagios-plugins-basic, thanks Ferenc Wagner
    (Closes: #630711)

 -- Jan Wagner <waja@cyconet.org>  Wed, 07 Sep 2011 12:23:56 +0200
