@@ -21,9 +21,20 @@ Description: Plugins for nagios compatible monitoring systems (metapackage)
  (using nagios-nrpe-server or nsca), you may be interested in the
  nagios-plugins-basic package.
 
+Package: nagios-plugins-common
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, ucf
+Breaks: nagios-plugins-basic (<= 1.4.15-5)
+Suggests: nagios3 | icinga
+Description: Common files for plugins for nagios compatible monitoring
+ Common files for plugins for nagios compatible monitoring systems like Nagios
+ and Icinga.
+ .
+ This package contains common files which maybe needed for plugins.
+
 Package: nagios-plugins-basic
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, procps, iputils-ping [linux-any], inetutils-ping [kfreebsd-any hurd-any], ucf
+Depends: ${shlibs:Depends}, ${misc:Depends}, nagios-plugins-common, procps, iputils-ping [linux-any], inetutils-ping [kfreebsd-any hurd-any], ucf
 Conflicts: nagios-plugins (<= 1.4.2-3)
 Replaces: nagios-plugins, nagios-plugins-standard
 Suggests: nagios3 | icinga
