@@ -1,10 +1,10 @@
-usr/share/doc/nagios-plugins-basic/NEWS.Debian.gz usr/share/doc/nagios-plugins-standard/NEWS.Debian.gz
-usr/share/doc/nagios-plugins-basic/README.Debian.gz usr/share/doc/nagios-plugins-standard/README.Debian.gz
-usr/share/doc/nagios-plugins-basic/changelog.gz usr/share/doc/nagios-plugins-standard/changelog.gz
-usr/share/doc/nagios-plugins-basic/examples usr/share/doc/nagios-plugins-standard/examples
-usr/share/doc/nagios-plugins-basic/FAQ usr/share/doc/nagios-plugins-standard/FAQ
-usr/share/doc/nagios-plugins-basic/NEWS.gz usr/share/doc/nagios-plugins-standard/NEWS.gz
-usr/share/doc/nagios-plugins-basic/README usr/share/doc/nagios-plugins-standard/README
-usr/share/doc/nagios-plugins-basic/LEGAL usr/share/doc/nagios-plugins-standard/LEGAL
-usr/share/doc/nagios-plugins-basic/REQUIREMENTS usr/share/doc/nagios-plugins-standard/REQUIREMENTS
-usr/share/doc/nagios-plugins-basic/SUPPORT usr/share/doc/nagios-plugins-standard/SUPPORT
+usr/share/doc/nagios-plugins-common/NEWS.Debian.gz usr/share/doc/nagios-plugins-standard/NEWS.Debian.gz
+usr/share/doc/nagios-plugins-common/README.Debian.gz usr/share/doc/nagios-plugins-standard/README.Debian.gz
+usr/share/doc/nagios-plugins-common/changelog.gz usr/share/doc/nagios-plugins-standard/changelog.gz
+usr/share/doc/nagios-plugins-common/examples usr/share/doc/nagios-plugins-standard/examples
+usr/share/doc/nagios-plugins-common/FAQ usr/share/doc/nagios-plugins-standard/FAQ
+usr/share/doc/nagios-plugins-common/NEWS.gz usr/share/doc/nagios-plugins-standard/NEWS.gz
+usr/share/doc/nagios-plugins-common/README usr/share/doc/nagios-plugins-standard/README
+usr/share/doc/nagios-plugins-common/LEGAL usr/share/doc/nagios-plugins-standard/LEGAL
+usr/share/doc/nagios-plugins-common/REQUIREMENTS usr/share/doc/nagios-plugins-standard/REQUIREMENTS
+usr/share/doc/nagios-plugins-common/SUPPORT usr/share/doc/nagios-plugins-standard/SUPPORT
